[project]
name = "modbus_client"
version = "0.2.0"
description = "Device oriented Modbus client for Python. Focused on data meaning and data types."
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8"
keywords = ["cli", "client", "data", "modbus"]
authors = [
    { name = "Krystian Dużyński" },
]

dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
repository = "https://github.com/KrystianD/modbus_client"

[project.scripts]
modbus-cli = "modbus_client.cli.__main__:main_cli"
modbus-server = "modbus_client.server.__main__:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
server = {file = ["requirements_server.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"modbus_client.device.devices" = ["*.yaml"]
